--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,8 @@
         android:theme="@style/Theme.PhongTroProject"
         tools:targetApi="31">
         <activity
-            android:name=".PostForRent"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:name=".UserFragment"
+            android:exported="false" />
         <activity
             android:name=".HomePage"
             android:exported="false">
